
	* a bug in the typology of the variables in pht is fixed

	* a bug in vcovBK (matrices degenerating into vectors) is fixed
	(thx David Hugh-Jones for bug report)

	* the Between function now returns a pseries object

	* the resid and fitted method now returns a pseries object

	* the pgmm method has been rewriten ; the data frame is then first
	balanced and NAs are then overwriten by 0s

Changes since version 1.2-9	

	* the pccep function, estimating CCEP models a la Pesaran, has
	been added together withsummary and print.summary methods. The
	function generates objects of a class of their own ("pccep"), much
	like 'pggls', together with 'panelmodel'.

	* the pmg function, estimating MG, DMG and CCEMG models a la
	Pesaran, has been added together with summary and print.summary
	methods. The function generates objects of a class of their own
	("pmg"), much like 'pggls', together with 'panelmodel'. In the
	future must consider possible merger with 'pvcm'.

        * the new cipstest function performs a second-generation CIPS test
	for unit roots on pseries objects

        * the new (hidden) function pmerge is used internally by cipstest
	to merge lags and differences of a pseries into the original
	pdata.frame. Will possibly be added to the user space in the
	future.

Changes since version 1.2-10
	
	* for unbalanced hausman-taylor model, the printing of the error
	components was wrong, it is now fixed
	
	* the printing of the removed variables (cst or NA) is improved

	* the pgmm function has been improved to deal correctly with holes
	in the cross-sections ; a collapse argument is added to limit the
	number of gmm instruments

	* the CoefTAble element of summary.pgmm objects is renamed
	coefficients, so that it can easily be extracted using the coef
	method

	* the default value for robust is now TRUE in the summary.pgmm
	method

	* a new argument lost.ts is added in pgmm to select manually the
	number of lost time series